--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
     package="com.adalbertosoares.buddybox">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,7 +14,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name="buddybox.ui.MainActivity"
             android:launchMode="singleTask"
@@ -23,10 +21,10 @@
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="buddybox.ui.PlayingActivity"
             android:launchMode="singleTask"
@@ -40,11 +38,19 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
 
-        <receiver android:name="buddybox.ui.notification.NotificationDismissedReceiver"    android:exported="false" />
-        <receiver android:name="buddybox.ui.notification.NotificationPlayPauseReceiver"    android:exported="false" />
-        <receiver android:name="buddybox.ui.notification.NotificationSkipNextReceiver"     android:exported="false" />
-        <receiver android:name="buddybox.ui.notification.NotificationSkipPreviousReceiver" android:exported="false" />
-        <receiver android:name="android.support.v4.media.session.MediaButtonReceiver" >
+        <receiver
+            android:name="buddybox.ui.notification.NotificationDismissedReceiver"
+            android:exported="false" />
+        <receiver
+            android:name="buddybox.ui.notification.NotificationPlayPauseReceiver"
+            android:exported="false" />
+        <receiver
+            android:name="buddybox.ui.notification.NotificationSkipNextReceiver"
+            android:exported="false" />
+        <receiver
+            android:name="buddybox.ui.notification.NotificationSkipPreviousReceiver"
+            android:exported="false" />
+        <receiver android:name="android.support.v4.media.session.MediaButtonReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
@@ -52,9 +58,9 @@
 
         <service
             android:name="buddybox.io.BluetoothDetectService"
-            android:stopWithTask="true"
             android:enabled="true"
-            android:exported="false">
+            android:exported="false"
+            android:stopWithTask="true">
             <intent-filter android:priority="0">
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
@@ -68,8 +74,9 @@
         </service>
         <service
             android:name="buddybox.io.MediaInfoRetriever"
-            android:stopWithTask="true"/>
+            android:stopWithTask="true" />
 
+        <activity android:name="buddybox.ui.ArtistActivity"></activity>
     </application>
 
 </manifest>
