Adds SongFoundTest Extracts HeadsetPlugListener from MainActivity to io package Delegates handler.post to ui activities and fragments

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -21,9 +22,20 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:appcompat-v7:27.1.0'
     compile 'com.github.woxthebox:draglistview:1.5.2'
-    compile 'com.android.support:design:27.0.2'
+    compile 'com.android.support:design:27.1.0'
     compile files('libs/jl1.0.1.jar')
+
+    // App's dependencies, including test
+    compile 'com.android.support:support-annotations:27.1.0'
+    testCompile 'junit:junit:4.12'
+
+    // AndroidJUnitRunner and JUnit Rules
+    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    androidTestCompile 'com.android.support.test:rules:1.0.1'
+
+    // Testing-only dependencies
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
+
 }
