--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,10 @@
                 <action android:name="android.intent.action.HEADSET_PLUG" />
             </intent-filter>
         </service>
+        <service
+            android:name="sov.SovAPIService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
