--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 29
         versionCode 3
         versionName "v1.0.1-beta"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -26,20 +26,20 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
-    api 'androidx.appcompat:appcompat:1.0.0'
+    api 'com.android.support:appcompat-v7:27.1.1'
     api 'com.github.woxthebox:draglistview:1.5.2'
-    api 'com.google.android.material:material:1.0.0'
+    api 'com.android.support:design:27.1.1'
     api files('libs/jl1.0.1.jar')
 
     // App's dependencies, including test
-    api 'androidx.annotation:annotation:1.0.0'
+    api 'com.android.support:support-annotations:27.1.1'
     testImplementation 'junit:junit:4.12'
 
     // AndroidJUnitRunner and JUnit Rules
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 
     // Testing-only dependencies
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 }
